<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/largeMargin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_inputTip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_store"
                    android:drawablePadding="@dimen/quarter_margin"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewQuestion"
                style="@style/Widget.TipCalculator_Codelab.TextView"
                android:text="@string/how_was_the_service_TextView"
                app:drawableStartCompat="@drawable/ic_service"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField" />

            <RadioGroup
                android:id="@+id/tip_RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radioButtonAmazing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewQuestion">

                <RadioButton
                    android:id="@+id/radioButtonAmazing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_20_RadioButton" />

                <RadioButton
                    android:id="@+id/radioButtonGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_15_RadioButton" />

                <RadioButton
                    android:id="@+id/radioButtonOK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_15_RadioButton" />

            </RadioGroup>

            <TextView
                android:id="@+id/roundUpTextView"
                style="@style/Widget.TipCalculator_Codelab.TextView"
                android:text="@string/round_up_tip_TextView"
                app:drawableStartCompat="@drawable/ic_round_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tip_RadioGroup" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/roundUpSwitch"
                style="@style/Widget.TipCalculator_Codelab.CompoundButton.Switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/roundUpTextView"
                app:useMaterialThemeColors="false" />

            <Button
                android:id="@+id/calculate_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quarter_margin"
                android:text="@string/calculate_Button"
                app:layout_constraintTop_toBottomOf="@id/roundUpTextView" />

            <TextView
                android:id="@+id/totalTextView"
                style="@style/Widget.TipCalculator_Codelab.TextView"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculate_Button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>